crates/runtime/tests/snapshots/run_pass@empty.scad.snap
---
source: crates/runtime/tests/integration-tests.rs
description: ""
input_file: crates/runtime/tests/run-pass/empty.scad
---
Output {
    geometry: [],
    printed: [],
}
